# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  12 Dec 2004; Mike Frysinger <vapier@gentoo.org>:

    Tweak get_mount_fstab to only print the first mount point found and then 
    spit warning messages for extra matches.

    Add an additional sanity check to the udev tarball usage.  Don't try to 
    unpack an empty or non-existant tarball.

    Tweak the 'static' description so users know they can use it to make 
    /sbin/rc ignore /dev completely.

  12 Dec 2004; Martin Schlemmer <azarah@gentoo.org>:

    Add suport for using /sbin/udevsend from new udev-048 as hotplug multiplexer.

  12 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    fixed installed typo in net.lo - fixes #74152. Thanks to Federico Galassi

    dhcpcd and udhcpc now run via the eval statement so quotes can be used
    in options. Fixes #74053 - thanks to Evan Buswell

  09 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    fixed net.lo getting vlan config
    rc doesn't stop hotplugged devices when system is booting - fixes #61594
    thanks to Andreas Sundebo for the fix

  08 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    iwconfig now unsets wireless config and downs interface when backgrounding
    fails
    wpa_supplicant now supports backgrounding
    removed is_in_fstab function and replaced with get_mount_fstab which
    returns a mount command based on the contents of fstab. Resolves bugs
    #70044 and #73762

  07 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    essidnet - fixed setting up search domains
    ifconfig now reads the old gateway variable correctly - fixes #73641
    iwconfig now supports backgrounding
    ifconfig and iproute2 now support function interface_set_mac_address
    macchanger no longer depends on macchanger if configuring a specific
    mac address

    fix depstop for net-services when system is booting - should fix #61594